Advanced Array Methods Completed Exercises

--- a/index.html
+++ b/index.html
@@ -1,35 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Loan Calculator</title>
-    <script type="text/javascript" src="calculator.js"></script>
-    <link rel="stylesheet" href="calculator.css">
-  </head>
-  <body>
-    <header>
-      <h1>Loan Calculator 💰💲💵</h1>
-    </header>
-    <section class="calc-container">
-      <form id="calc-form">
-        <label>
-          Loan Amount
-          <input type="text" id="loan-amount">
-        </label>
-        <label>
-          Term in Years
-          <input type="text" id="loan-years">
-        </label>
-        <label>
-          Yearly Rate
-          <input type="text" id="loan-rate">
-        </label>
-        <button type="submit" id="calc-submit">Calculate</button>
-      </form>
-      <div>
-        <h3>Monthly Payment<h3>
-        <span id="monthly-payment"></span>
-      </div>
-    </section>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.css">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/boot.js"></script>
+  <script type="text/javascript" src="foreach-map-filter.js"></script>
+  <script type="text/javascript" src="foreach-map-filter.test.js"></script>
+</head>
+
+<body>
+
+</body>
+
 </html>
