completed giphy app

--- a/Unit13_jQuery/Part2-MoviesApp/index.html
+++ b/Unit13_jQuery/Part2-MoviesApp/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-    <form id='movie-form'>
-        <label for='movie-title'>Movie Title:</label>
-        <input id='movie-title' type='text' minlength='2'></input>
-        <label for='rating'>Rating:</label>
-        <input id='rating' type='number' min=0 max=10></input>
-        <button id='submit'>Submit</button>
-    </form>
+    <fieldset>
+        <form id='movie-form'>
+            <label for='movie-title'>Movie Title:</label>
+            <input id='movie-title' type='text' minlength='2'></input>
+            <label for='rating'>Rating:</label>
+            <input id='rating' type='number' min=0 max=10></input>
+            <button id='submit'>Submit</button>
+        </form>
+    </fieldset>
     <br>
     <div id='sort'>Sort By
         <button id='sort-title'>Title</button>
