--- a/Unit14_HowWebWorksAjax/index_simple.html
+++ b/Unit14_HowWebWorksAjax/index_simple.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajax Practice</title>
+    <title>Simple Form</title>
 </head>
 
 <body>
-    <script src="https://unpkg.com/axios/dist/axios.js"></script>
-    <script src="app_ajax.js"></script>
+    <form method='POST'>
+        <input type='text' placeholder='Movie Title' name='movie'>
+        <button type='submit'>Search!</button>
+    </form>
 </body>
 
 </html>
