Completed 14.14 API Exercise

--- a/Unit14_HowWebWorksAjax/ajax-giphy-party/index.html
+++ b/Unit14_HowWebWorksAjax/ajax-giphy-party/index.html
@@ -11,7 +11,7 @@
     Giphy Party
   </h1>
 
-  <form id='gifForm'>
+  <form id='gifForm' style='display: inline-block'>
     <input id='searchBox' type='text' placeholder='Enter a search term' name='q'>
     <button id='searchBtn'>Search Giphy!</button>
   </form>
